--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
 		"plugin:@typescript-eslint/recommended",
 		"prettier",
 		"plugin:testing-library/react",
-		"plugin:jest-dom/recommended"
+		"plugin:jest-dom/recommended",
+		"plugin:storybook/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
@@ -27,6 +28,9 @@
 				"**/?(*.)+(spec|test).[jt]s?(x)"
 			],
 			"extends": ["plugin:testing-library/react"]
+		},
+		{
+			"files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"]
 		}
 	],
 	"rules": {
