fix(ci): update CI to run in each PR opened
Update CI config file to run the action in each PR that is opened, reopened or synchronized

--- a/.github/worflows/ci.yaml
+++ b/.github/worflows/ci.yaml
@@ -2,9 +2,7 @@ name: Build & Test CI
 
 on:
   pull_request:
-    branches:
-      - main
-      - develop
+    types: [opened, reopened, synchronize]
 
 jobs:
   builds:
