--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.3",
     "@types/jest-axe": "^3.5.4",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "babel-loader": "^8.2.5",
@@ -74,5 +75,7 @@
       "eslint --fix"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "rollup-plugin-import-css": "^3.0.3"
+  }
 }
