--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-storybook": "^0.5.13",
     "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.2",
     "jest-axe": "^6.0.0",
     "jest-environment-jsdom": "^28.1.2",
