--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "random-components",
+	"name": "minim-ui",
 	"version": "0.1.0",
 	"description": "A component library made for the Chat Random web app. It follows a custom design system made by the creator.",
 	"keywords": [
@@ -10,10 +10,11 @@
 		"styled-components",
 		"component lib",
 		"themes",
-		"components"
+		"components",
+		"minim ui"
 	],
-	"homepage": "https://github.com/thiago-porto25/chat-random-components",
-	"bugs": "https://github.com/thiago-porto25/chat-random-components/issues",
+	"homepage": "https://github.com/thiago-porto25/minim-ui",
+	"bugs": "https://github.com/thiago-porto25/minim-ui/issues",
 	"main": "dist/index.js",
 	"author": "Thiago Porto <thiago_porto25@hotmail.com> (http://thiagoporto.tech)",
 	"license": "MIT",
@@ -56,6 +57,7 @@
 		"babel-loader": "^8.2.5",
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "^3.3.0",
+		"dayjs": "^1.11.4",
 		"eslint": "^8.18.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-jest-dom": "^4.0.2",
@@ -74,6 +76,7 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
 		"rollup": "^2.75.7",
+		"rollup-plugin-import-css": "^3.0.3",
 		"rollup-plugin-typescript2": "^0.32.1",
 		"styled-components": "^5.3.5",
 		"typescript": "^4.7.4"
@@ -89,8 +92,7 @@
 			"eslint --fix"
 		]
 	},
-	"dependencies": {
-		"dayjs": "^1.11.3",
-		"rollup-plugin-import-css": "^3.0.3"
-	}
+	"files": [
+		"dist"
+	]
 }
