--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,4 +18,4 @@ jobs:
       - name: Publish package on NPM 📦
         run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
