--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
 		"babel-loader": "^8.2.5",
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "^3.3.0",
-		"dayjs": "^1.11.4",
 		"eslint": "^8.18.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-jest-dom": "^4.0.2",
@@ -70,11 +69,9 @@
 		"jest-axe": "^6.0.0",
 		"jest-environment-jsdom": "^28.1.2",
 		"lint-staged": "^13.0.3",
-		"normalize.css": "^8.0.1",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.4.0",
 		"rollup": "^2.75.7",
 		"rollup-plugin-import-css": "^3.0.3",
 		"rollup-plugin-typescript2": "^0.32.1",
@@ -94,5 +91,9 @@
 	},
 	"files": [
 		"dist"
-	]
+	],
+	"dependencies": {
+		"dayjs": "^1.11.4",
+		"normalize.css": "^8.0.1"
+	}
 }
