--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thiagoporto/minim-ui",
-	"version": "0.1.1-alpha",
+	"version": "0.1.2-alpha",
 	"description": "A component library made for the Chat Random web app. It follows a custom design system made by the creator.",
 	"keywords": [
 		"design system",
@@ -93,7 +93,6 @@
 		"dist"
 	],
 	"dependencies": {
-		"dayjs": "^1.11.4",
-		"normalize.css": "^8.0.1"
+		"dayjs": "^1.11.4"
 	}
 }
