--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"@babel/preset-typescript": "^7.18.6",
 		"@commitlint/cli": "^17.0.3",
 		"@commitlint/config-conventional": "^17.0.3",
+		"@fontsource/anek-latin": "^4.5.1",
+		"@fontsource/lato": "^4.5.8",
 		"@rollup/plugin-image": "^2.1.1",
 		"@storybook/addon-a11y": "^6.5.9",
 		"@storybook/addon-actions": "^6.5.9",
